test/fixtures/errors/test-no-extra-info-on-fatal-exception.snapshot
*test-no-extra-info-on-fatal-exception.js:*
throw new Error('foo');
^

Error: foo
    at *
